docs: update README and GitHub Pages